# pathogenicity-gates

./: .gitignore  README.md  breakit_v2.jsx  p53_gate_logic_v17_for_manuscript.md  pyproject.toml
.github/workflows/: python-publish.yml
Data/: p53_ppi_interface.json  pdb_file_list.txt
Result/: p53_v17_results_for_manuscript.txt
docs/: phase1_notes.md  phase2_notes.md  phase3_notes.md  phase4_notes.md  phase5_notes.md  transferability_matrix.md
paper_markdown/: 01_performance_summary.md  02_gate_design_philosophy.md  03_geta_architecture.md  04_transferability_matrix.md  05_session_findings.md  06_silent_benign_discovery.md  README.md  REPRODUCE.md
pathogenicity_gates/: README.md  __init__.py  predictor.py  pyproject.toml
pathogenicity_gates.egg-info/: requires.txt
pathogenicity_gates/adapters/: __init__.py  direct_builder.py  v18_adapter.py
pathogenicity_gates/annotations/: __init__.py  loader.py
pathogenicity_gates/channels/: __init__.py  context.py  registry.py
pathogenicity_gates/cli/: __init__.py  __main__.py  main.py  utils.py
pathogenicity_gates/legacy/: __init__.py  p53_gate_v17_idr.py  p53_gate_v18_final.py  ssoc_v332.py
pathogenicity_gates/pathogenicity_gates.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pathogenicity_gates/physics/: __init__.py  constants.py  corrections.py  geometry.py
pathogenicity_gates/scripts/: __init__.py  build_uniprot_features.py  extract_partner_face.py  verify_ptm_consistency.py
scr/: generate_figures.py  p53_gate_v17_idr.py
tests/: test_no_legacy_leak.py  test_phase5_cli.py
(+57 files in other folders)
