[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathogenicity-gates"
version = "0.5.1"
description = "Zero-parameter first-principles pathogenicity prediction via Gate & Channel framework"
authors = [
    {name = "Masamichi Iizumi", email = "masamichi@miosync.com"},
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pathogenicity-gates = "pathogenicity_gates.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pathogenicity_gates*"]

[tool.setuptools.package-data]
pathogenicity_gates = [
    "data/**/*.yaml",
    "data/**/*.json",
    "data/**/*.pdb",
    "data/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
